adding a new settings section related to exporting/importing settings

--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -415,6 +415,7 @@
     <string name="saving_label">Saxlama</string>
     <string name="startup">Başlanğıc</string>
     <string name="text">Mətn</string>
+    <string name="migrating">Migrating</string>
 
     <!-- Recycle Bin -->
     <string name="restore_this_file">Bu faylı geri qaytar</string>
