--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -418,6 +418,7 @@
     <string name="saving_label">Desant</string>
     <string name="startup">Inici</string>
     <string name="text">Text</string>
+    <string name="migrating">Migrating</string>
 
     <!-- Recycle Bin -->
     <string name="restore_this_file">Restaura aquest fitxer</string>
