--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -415,6 +415,7 @@
     <string name="saving_label">Εξοικονόμηση</string>
     <string name="startup">Εκκίνηση</string>
     <string name="text">Κείμενο</string>
+    <string name="migrating">Migrating</string>
 
     <!-- Recycle Bin -->
     <string name="restore_this_file">Επαναφορά αυτού του αρχείου</string>
