--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -415,6 +415,7 @@
     <string name="saving_label">Guardando</string>
     <string name="startup">Puesta en marcha</string>
     <string name="text">Texto</string>
+    <string name="migrating">Migrating</string>
 
     <!-- Recycle Bin -->
     <string name="restore_this_file">Restaurar el fichero</string>
