--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -435,6 +435,7 @@
     <string name="saving_label">Spremanje</string>
     <string name="startup">Pokretanje</string>
     <string name="text">Tekst</string>
+    <string name="migrating">Migrating</string>
 
     <!-- Recycle Bin -->
     <string name="restore_this_file">Vrati ovu datoteku</string>
