--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -415,6 +415,7 @@
     <string name="saving_label">Menyimpan</string>
     <string name="startup">Saat memulai</string>
     <string name="text">Teks</string>
+    <string name="migrating">Migrating</string>
 
     <!-- Recycle Bin -->
     <string name="restore_this_file">Pulihkan file ini</string>
