--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -415,6 +415,7 @@
     <string name="saving_label">Salvataggio</string>
     <string name="startup">Avvio</string>
     <string name="text">Testo</string>
+    <string name="migrating">Migrating</string>
 
     <!-- Recycle Bin -->
     <string name="restore_this_file">Ripristina questo file</string>
