--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -434,6 +434,7 @@
     <string name="saving_label">Zachowywanie</string>
     <string name="startup">Uruchamianie</string>
     <string name="text">Tekst</string>
+    <string name="migrating">Migrating</string>
 
     <!-- Recycle Bin -->
     <string name="restore_this_file">Przywróć ten plik</string>
