--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -415,6 +415,7 @@
     <string name="saving_label">Guardar</string>
     <string name="startup">Arranque</string>
     <string name="text">Texto</string>
+    <string name="migrating">Migrating</string>
 
     <!-- Recycle Bin -->
     <string name="restore_this_file">Restaurar este ficheiro</string>
