--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -436,6 +436,7 @@
     <string name="saving_label">Сохранение</string>
     <string name="startup">Запуск</string>
     <string name="text">Текст</string>
+    <string name="migrating">Migrating</string>
 
     <!-- Recycle Bin -->
     <string name="restore_this_file">Восстановить этот файл</string>
