--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -436,6 +436,7 @@
     <string name="saving_label">Ukladanie</string>
     <string name="startup">Po spustení</string>
     <string name="text">Text</string>
+    <string name="migrating">Migrovanie</string>
 
     <!-- Recycle Bin -->
     <string name="restore_this_file">Obnoviť tento súbor</string>
