--- a/commons/src/main/res/values-sl/strings.xml
+++ b/commons/src/main/res/values-sl/strings.xml
@@ -456,6 +456,7 @@
     <string name="saving_label">Shranjevanje</string>
     <string name="startup">Zagon</string>
     <string name="text">Besedilo</string>
+    <string name="migrating">Migrating</string>
 
     <!-- Recycle Bin -->
     <string name="restore_this_file">Obnovi to datoteko</string>
