--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -415,6 +415,7 @@
     <string name="saving_label">Kaydetme</string>
     <string name="startup">Başlangıç</string>
     <string name="text">Metin</string>
+    <string name="migrating">Migrating</string>
 
     <!-- Recycle Bin -->
     <string name="restore_this_file">Bu dosyayı geri yükle</string>
