--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -415,6 +415,7 @@
     <string name="saving_label">儲存中</string>
     <string name="startup">啟動</string>
     <string name="text">文字</string>
+    <string name="migrating">Migrating</string>
 
     <!-- Recycle Bin -->
     <string name="restore_this_file">還原這個檔案</string>
