--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -415,6 +415,7 @@
     <string name="saving_label">Salvando</string>
     <string name="startup">Inicialização</string>
     <string name="text">Texto</string>
+    <string name="migrating">Migrating</string>
 
     <!-- Recycle Bin -->
     <string name="restore_this_file">Restore this file</string>
