--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -415,6 +415,7 @@
     <string name="saving_label">正在保存</string>
     <string name="startup">启动</string>
     <string name="text">文本</string>
+    <string name="migrating">Migrating</string>
 
     <!-- Recycle Bin -->
     <string name="restore_this_file">恢复此文件</string>
