adding a new string for missing entries at importing

--- a/commons/src/main/res/values-ar/strings.xml
+++ b/commons/src/main/res/values-ar/strings.xml
@@ -448,6 +448,7 @@
     <string name="exporting_failed">فشلت عملية التصدير</string>
     <string name="importing_some_entries_failed">فشل استيراد بعض المدخلات</string>
     <string name="exporting_some_entries_failed">فشل تصدير بعض المدخلات</string>
+    <string name="no_entries_for_importing">No entries for importing have been found</string>
     <string name="no_entries_for_exporting">لم يتم العثور على مدخلات للتصدير</string>
 
     <!-- OTG devices -->
