--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -441,6 +441,7 @@
     <string name="exporting_failed">Çıxarış uğursuzdur</string>
     <string name="importing_some_entries_failed">Bəzi girişləri daxil etmək olmur</string>
     <string name="exporting_some_entries_failed">Bəzi girişləri çıxarmaq olmur</string>
+    <string name="no_entries_for_importing">No entries for importing have been found</string>
     <string name="no_entries_for_exporting">Çıxarış üçün heçbir giriş tapılmadı</string>
 
     <!-- OTG devices -->
