--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -441,6 +441,7 @@
     <string name="exporting_failed">Eksport mislykkedes</string>
     <string name="importing_some_entries_failed">Import mislykkedes delvist</string>
     <string name="exporting_some_entries_failed">Eksport mislykkedes delvist</string>
+    <string name="no_entries_for_importing">No entries for importing have been found</string>
     <string name="no_entries_for_exporting">Der er ikke fundet indhold til eksport</string>
 
     <!-- OTG devices -->
