--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -441,6 +441,7 @@
     <string name="exporting_failed">Exportieren fehlgeschlagen</string>
     <string name="importing_some_entries_failed">Importieren einiger Einträge fehlgeschlagen</string>
     <string name="exporting_some_entries_failed">Exportieren einiger Einträge fehlgeschlagen</string>
+    <string name="no_entries_for_importing">No entries for importing have been found</string>
     <string name="no_entries_for_exporting">Keine Einträge zum Exportieren gefunden</string>
 
     <!-- OTG devices -->
