--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -441,6 +441,7 @@
     <string name="exporting_failed">Gagal mengekspor</string>
     <string name="importing_some_entries_failed">Gagal mengimpor beberapa entri</string>
     <string name="exporting_some_entries_failed">Gagal mengekspor beberapa entri</string>
+    <string name="no_entries_for_importing">No entries for importing have been found</string>
     <string name="no_entries_for_exporting">Tidak ditemukan entri untuk diekspor</string>
 
     <!-- OTG devices -->
