--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -441,6 +441,7 @@
     <string name="exporting_failed">Esportazione fallita</string>
     <string name="importing_some_entries_failed">Importazione di alcuni elementi fallita</string>
     <string name="exporting_some_entries_failed">Esportazione di alcuni elementi fallita</string>
+    <string name="no_entries_for_importing">No entries for importing have been found</string>
     <string name="no_entries_for_exporting">Nessun elemento trovato da esportare</string>
 
     <!-- OTG devices -->
