--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -458,6 +458,7 @@
     <string name="exporting_failed">Eksportavimas nepavyko</string>
     <string name="importing_some_entries_failed">Kai kurių įrašų importuoti nepavyko</string>
     <string name="exporting_some_entries_failed">Kai kurių įrašų eksportuoti nepavyko</string>
+    <string name="no_entries_for_importing">No entries for importing have been found</string>
     <string name="no_entries_for_exporting">Nerasta įrašų eksportavimui</string>
 
     <!-- OTG devices -->
