--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -441,6 +441,7 @@
     <string name="exporting_failed">Eksportering feilet</string>
     <string name="importing_some_entries_failed">Importering av noen oppføringer feilet</string>
     <string name="exporting_some_entries_failed">Eksportering av noen oppføringer feilet</string>
+    <string name="no_entries_for_importing">No entries for importing have been found</string>
     <string name="no_entries_for_exporting">Ingen oppføringer for eksportering er funnet</string>
 
     <!-- OTG devices -->
