--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -441,6 +441,7 @@
     <string name="exporting_failed">Exporteren mislukt</string>
     <string name="importing_some_entries_failed">Sommige items konden niet worden geïmporteerd</string>
     <string name="exporting_some_entries_failed">Sommige items konden niet worden geëxporteerd</string>
+    <string name="no_entries_for_importing">No entries for importing have been found</string>
     <string name="no_entries_for_exporting">Er zijn geen items gevonden om te exporteren</string>
 
     <!-- OTG devices -->
