--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -461,6 +461,7 @@
     <string name="exporting_failed">Eksportowanie nie powiodło się</string>
     <string name="importing_some_entries_failed">Importowanie niektórych wpisów nie powiodło się</string>
     <string name="exporting_some_entries_failed">Eksportowanie niektórych wpisów nie powiodło się</string>
+    <string name="no_entries_for_importing">No entries for importing have been found</string>
     <string name="no_entries_for_exporting">Nie znalazłem żadnych wpisów do wyeksportowania</string>
 
     <!-- OTG devices -->
