--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -441,6 +441,7 @@
     <string name="exporting_failed">Falha na exportação</string>
     <string name="importing_some_entries_failed">Houve falha em alguns ítens da importação</string>
     <string name="exporting_some_entries_failed">Houve falha em alguns ítens da exportação</string>
+    <string name="no_entries_for_importing">No entries for importing have been found</string>
     <string name="no_entries_for_exporting">Não foram encontramos ítens para exportar</string>
 
     <!-- OTG devices -->
