--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -441,6 +441,7 @@
     <string name="exporting_failed">Dışa aktarılamadı</string>
     <string name="importing_some_entries_failed">Bazı öğeler içe aktarılamadı</string>
     <string name="exporting_some_entries_failed">Bazı öğeler dışa aktarılamadı</string>
+    <string name="no_entries_for_importing">No entries for importing have been found</string>
     <string name="no_entries_for_exporting">Dışa aktarılacak öğe bulunamadı</string>
 
     <!-- OTG devices -->
