--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -441,6 +441,7 @@
     <string name="exporting_failed">匯出失敗</string>
     <string name="importing_some_entries_failed">部分項目匯入失敗</string>
     <string name="exporting_some_entries_failed">部分項目匯出失敗</string>
+    <string name="no_entries_for_importing">No entries for importing have been found</string>
     <string name="no_entries_for_exporting">未發現供匯出的項目</string>
 
     <!-- OTG devices -->
