--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -458,6 +458,7 @@
     <string name="exporting_failed">Exporting failed</string>
     <string name="importing_some_entries_failed">Importing some entries failed</string>
     <string name="exporting_some_entries_failed">Exporting some entries failed</string>
+    <string name="no_entries_for_importing">No entries for importing have been found</string>
     <string name="no_entries_for_exporting">No entries for exporting have been found</string>
 
     <!-- OTG devices -->
