--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -463,6 +463,7 @@
     <string name="exporting_failed">Exportovanie zlyhalo</string>
     <string name="importing_some_entries_failed">Importovanie niektorých položiek zlyhalo</string>
     <string name="exporting_some_entries_failed">Exportovanie niektorých položiek zlyhalo</string>
+    <string name="no_entries_for_importing">Nenašli sa žiadne položky pre import</string>
     <string name="no_entries_for_exporting">Nenašli sa žiadne položky pre export</string>
 
     <!-- OTG devices -->
