--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -441,6 +441,7 @@
     <string name="exporting_failed">导出失败</string>
     <string name="importing_some_entries_failed">部分项目导入失败</string>
     <string name="exporting_some_entries_failed">部分项目导出失败</string>
+    <string name="no_entries_for_importing">No entries for importing have been found</string>
     <string name="no_entries_for_exporting">未找到要导出的项目</string>
 
     <!-- OTG devices -->
