--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -415,7 +415,7 @@
     <string name="saving_label">Εξοικονόμηση</string>
     <string name="startup">Εκκίνηση</string>
     <string name="text">Κείμενο</string>
-    <string name="migrating">Migrating</string>
+    <string name="migrating">Μετεγκατάσταση</string>
 
     <!-- Recycle Bin -->
     <string name="restore_this_file">Επαναφορά αυτού του αρχείου</string>
@@ -441,7 +441,7 @@
     <string name="exporting_failed">Η Εξαγωγή απέτυχε</string>
     <string name="importing_some_entries_failed">Η Εισαγωγή μερικών καταχωρήσεων απέτυχε</string>
     <string name="exporting_some_entries_failed">Η Εξαγωγή μερικών καταχωρήσεων απέτυχε</string>
-    <string name="no_entries_for_importing">No entries for importing have been found</string>
+    <string name="no_entries_for_importing">Δεν βρέθηκαν καταχωρήσεις για Εισαγωγή</string>
     <string name="no_entries_for_exporting">Δεν βρέθηκαν καταχωρήσεις για Εξαγωγή</string>
 
     <!-- OTG devices -->
