--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -441,8 +441,8 @@
     <string name="exporting_failed">Exporteren mislukt</string>
     <string name="importing_some_entries_failed">Sommige items konden niet worden geïmporteerd</string>
     <string name="exporting_some_entries_failed">Sommige items konden niet worden geëxporteerd</string>
-    <string name="no_entries_for_importing">No entries for importing have been found</string>
-    <string name="no_entries_for_exporting">Er zijn geen items gevonden om te exporteren</string>
+    <string name="no_entries_for_importing">Er zijn geen te importeren items gevonden</string>
+    <string name="no_entries_for_exporting">Er zijn geen te exporteren items gevonden</string>
 
     <!-- OTG devices -->
     <string name="usb">USB</string>
