--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -22,7 +22,7 @@
     <string name="transparent">Transparent</string>
     <string name="transparent_color">Color transparent</string>
     <string name="select_a_different_color">Selecciona un color diferent</string>
-    <string name="download">Download</string>
+    <string name="download">Descarregar</string>
 
     <!-- Favorites -->
     <string name="favorites">Preferits</string>
@@ -179,8 +179,8 @@
     <string name="undo_changes_confirmation">¿Segur que vols desfer els canvis?</string>
     <string name="save_before_closing">Tens canvis sense aplicar. Desar abans de sortir?</string>
     <string name="apply_to_all_apps">Aplicar els colors a totes les aplicacions Simple Apps</string>
-    <string name="app_icon_color_warning">WARNING: Some launchers do not handle app icon customization properly. In case the icon will disappear, try launching the app via Google Play or some widget, if available.
-        Once launched, just set back the default orange icon #F57C00. You might have to reinstall the app in the worst case.</string>
+    <string name="app_icon_color_warning">ADVERTIMENT: alguns llançadors no gestionen la personalització de la icona d\'aplicació correctament. En cas que la icona desaparegui, proveu de llançar l\'aplicació mitjançant Google Play o algun widget, si està disponible.
+        Un cop llançat, simplement configureu la icona de color taronja per defecte #F57C00. És possible que hàgiu de tornar a instal·lar l\'aplicació en el pitjor dels casos.</string>
     <string name="share_colors_success">Colors actualitzats satisfactoriament. S’ha afegit un nou tema anomenat \'Shared\'. Fes -lo servidr per actualitzar els colors de les aplicacions en el futur.</string>
     <string name="purchase_thank_you">
         <![CDATA[
@@ -389,7 +389,7 @@
     <string name="password_protect_hidden_items">Contrasenya per protegir els mitjans amagats</string>
     <string name="password_protect_whole_app">Contrasenya per protegir tota l’aplicació</string>
     <string name="password_protect_file_deletion">Protegir amb contrasenya l\'eliminació i el moviment dels fitxers</string>
-    <string name="keep_last_modified">Keep old last-modified value at file operations</string>
+    <string name="keep_last_modified">Manteniu el valor antic modificat per última vegada a les operacions de fitxer</string>
     <string name="show_info_bubble">Mostra una bombolla d\'informació en elements de desplaçament mitjançant arrossegament de la barra de desplaçament</string>
     <string name="prevent_phone_from_sleeping">No deixar dormir el telèfon amb la aplicació a primer pla</string>
     <string name="skip_delete_confirmation">Ignora sempre el diàleg de confirmació d\'eliminació</string>
@@ -404,10 +404,10 @@
     <string name="recycle_bin_cleaning_interval">Interval de neteja de paperera de reciclatge</string>
     <string name="empty_recycle_bin">Buida la paperera de reciclatge</string>
     <string name="force_portrait_mode">Força el mode de retrat</string>
-    <string name="export_settings">Export settings</string>
-    <string name="import_settings">Import settings</string>
-    <string name="settings_exported_successfully">Settings exported successfully</string>
-    <string name="settings_imported_successfully">Settings imported successfully</string>
+    <string name="export_settings">Exportar ajustaments</string>
+    <string name="import_settings">Importar ajustaments</string>
+    <string name="settings_exported_successfully">Ajustaments exportats correctament</string>
+    <string name="settings_imported_successfully">Ajustaments importats correctament</string>
 
     <!-- Setting sections -->
     <string name="visibility">Visibilitat</string>
@@ -418,7 +418,7 @@
     <string name="saving_label">Desant</string>
     <string name="startup">Inici</string>
     <string name="text">Text</string>
-    <string name="migrating">Migrating</string>
+    <string name="migrating">Migrant</string>
 
     <!-- Recycle Bin -->
     <string name="restore_this_file">Restaura aquest fitxer</string>
@@ -444,7 +444,7 @@
     <string name="exporting_failed">Exportació fallida</string>
     <string name="importing_some_entries_failed">L\'impotació d\'algunes entrades ha fallat</string>
     <string name="exporting_some_entries_failed">L\'exportació d\'algunes entrades ha fallat</string>
-    <string name="no_entries_for_importing">No entries for importing have been found</string>
+    <string name="no_entries_for_importing">No s'han trobat entrades per importar</string>
     <string name="no_entries_for_exporting">No s\'han trobat entrades per exportar</string>
 
     <!-- OTG devices -->
@@ -555,7 +555,7 @@
 
     <string name="sideloaded_app">
         <![CDATA[
-            It looks like your app version is corrupt. Please download the original version <a href="%s">here</a>.
+            Sembla que la versió de l\'aplicació està danyada. Baixeu la versió original <a href="%s">aquí</a>.
         ]]>
     </string>
 
