escaping an apostrophe

--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -444,7 +444,7 @@
     <string name="exporting_failed">Exportació fallida</string>
     <string name="importing_some_entries_failed">L\'impotació d\'algunes entrades ha fallat</string>
     <string name="exporting_some_entries_failed">L\'exportació d\'algunes entrades ha fallat</string>
-    <string name="no_entries_for_importing">No s'han trobat entrades per importar</string>
+    <string name="no_entries_for_importing">No s\'han trobat entrades per importar</string>
     <string name="no_entries_for_exporting">No s\'han trobat entrades per exportar</string>
 
     <!-- OTG devices -->
